--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,9 @@
     <body>
         {{- partial "header.html" . -}}
         <div id="content">
+            <h1>
+                from "github.com/pointyfar/hmd-theme"
+            </h1>
         {{- block "main" . }}{{- end }}
         </div>
         {{- partial "footer.html" . -}}
