--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,10 @@
 <hr>
 {{.Content}}
 <hr>
+SVG:
+{{ $svg := resources.Get "assets/feather/icons/activity.svg" }}
+{{ $svg }}
+<hr>
 Legam hic nescius eu duis, aute fabulas distinguantur. Velit cupidatat 
 do distinguantur. Quorum vidisse adipisicing do se mentitum 
 imitarentur nam ut fore laborum concursionibus nam eu vidisse sed 
