--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,6 +7,11 @@
             <h1>
                 from "github.com/pointyfar/hmd-theme"
             </h1>
+            <hr>
+        {{ $svg := resources.Get "feather/icons/activity.svg" }}
+        SVG:
+        {{ $svg.Content | safeHTML }}
+        <hr>
         {{- block "main" . }}{{- end }}
         </div>
         {{- partial "footer.html" . -}}
